# remc2clean

./: .gitignore  CMakeLists.txt  readme.md  start_gdbserver.sh
.github/workflows/: c-cpp.yml
infos/MagicCarpetFileFormat/: MagicCarpetFileFormat.txt
remc2/: CMakeLists.txt  remc2.cpp
remc2/engine/: AIL_stub.cpp  AIL_stub.h  ail_sound.h  defs.h  editor.cpp  engine_support.cpp  engine_support.h  engine_support_converts.cpp  file_handling.cpp  file_handling.h  menus_and_intros.cpp  menus_and_intros.h  read_config.cpp  read_config.h  structures.x  sub_main.cpp  sub_main.h
remc2/portability/: mctypes.h  port_filesystem.cpp  port_filesystem.h  port_sdl_sound.cpp  port_sdl_sound.h  port_sdl_vga_mouse.cpp  port_sdl_vga_mouse.h
